# tensordict

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  26-tensordict-replace-recompile.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  ISSUE.md  MANIFEST.in  README.md  UNBATCHED_TENSOR_TODO.md  distributed.html  genindex.html  index.html  mypy.ini  objects.inv  overview.html  playground.py  pyproject.toml  saving.html  scratch.py  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  stable  test_context_manager_manual.py  version.txt  versions.html
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_AGENT_PROMPT.md  labeler.yml  pytorch-probot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: analyze_flaky_tests.py  collect_nightly_status.py  generate_dashboard.py  install-deps-smoke-test.sh  linux-post-script.sh  linux-pre-script.sh  m1_script.sh  version_script.bat  version_script.sh  version_script_windows.bat  version_script_windows.sh  win-pre-script.bat
.github/tdbot/: README.md  tdbot.py
.github/tensordictbot/: README.md  tensordictbot.py
0.10/: distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  saving.html  search.html  searchindex.js  sg_execution_times.html
0.11/: distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  saving.html  search.html  searchindex.js  sg_execution_times.html
0.12/: compatibility.html  distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  printing.html  saving.html  search.html  searchindex.js  sg_execution_times.html  storage.html
0.13/: compatibility.html  distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  printing.html  saving.html  search.html  searchindex.js  sg_execution_times.html  storage.html
0.4/: distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  saving.html  search.html  searchindex.js  sg_execution_times.html
0.5/: distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  saving.html  search.html  searchindex.js  sg_execution_times.html
0.6/: distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  saving.html  search.html  searchindex.js  sg_execution_times.html
0.7/: distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  saving.html  search.html  searchindex.js  sg_execution_times.html
0.8/: distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  saving.html  search.html  searchindex.js  sg_execution_times.html
0.9/: distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  saving.html  search.html  searchindex.js  sg_execution_times.html
_sources/: index.rst.txt  overview.rst.txt  sg_execution_times.rst.txt
benchmarks/: bench_distributed.py  common_ops.py  common_ops_test.py  conftest.py  distributed_benchmark.py  distributed_benchmark_test.py  functional_benchmarks.py  functional_benchmarks_test.py  fx_benchmarks.py  pytree_benchmarks.py  tensordict_ops.py  test_distributed_benchmarks.py  test_fx_benchmarks.py  tree_benchmarks.py
docs/: Makefile  build_script.sh  requirements.txt
doctrees/: distributed.doctree  fx.doctree  index.doctree  overview.doctree  saving.doctree  sg_execution_times.doctree
examples/: dtensor_transfer_distributed_test.py  dtensor_transfer_plan_test.py  minimal_p2p_test.py  setup_node.sh  verify_install.py
flaky/: badge.json  data.json  flaky-tests.json  flaky-tests.md  index.html
main/: compatibility.html  distributed.html  fx.html  genindex.html  index.html  objects.inv  overview.html  printing.html  saving.html  search.html  searchindex.js  sg_execution_times.html  storage.html
nightly-status/: badge.json  history.json  index.html
packaging/: build_wheels.sh  pkg_helpers.bash
prototype/: tensordictclass.py
reference/: index.html  nn.html  prototype.html  tensorclass.html  tensordict.html
release-doc/: overview.html  searchindex.js  sg_execution_times.html
scripts/: check_rst_titles.py
tensordict/: __init__.py  __init__.pyi  _contextlib.py  _datasets.py  _dtensor.py  _extension.py  _functional_patch.py  _gds.py  _jit_ops.py  _lazy.py  _memory_map.py  _nestedkey.py  _nestedkey.pyi  _pytree.py  _reductions.py  _schema.py  _td.py  _td_functions.py  _td_memmap.py  _tensorcollection.py  _tensorcollection.pyi  _tensordict.py  _torch_func.py  _ucxx.py  _unbatched.py  _utils_key_json.py  _utils_options.py  _version.py  base.py  dtensor.py  dtype.py  dynamic_shaped_tensor.py  functional.py  memmap.py  memmap_deprec.py  memmap_refact.py  metatensor.py  persistent.py  redis.py  return_types.py  (+15 more)
tensordict/csrc/: CMakeLists.txt  FindPythonPyEnv.cmake  pybind.cpp  tensordict_bind.cpp  utils.cpp  utils.h
tensordict/csrc/cmake/: FindPythonPyEnv.cmake
test/: _utils_internal.py  conftest.py  smoke_test.py  test_compatibility.py  test_compile.py  test_dim.py  test_distributed.py  test_dtensor_transfer.py  test_functorch.py  test_fx.py  test_h5.py  test_llm.py  test_memmap.py  test_memmap2.py  test_memmap_deprec.py  test_nn.py  test_prototype.py  test_redis.py  test_setup.py  test_storage.py  test_store.py  test_store_utils_split.py  test_tabular.py  test_td_memmap_split.py  test_tensorclass.py  test_tensorclass_module.py  test_tensorclass_nofuture.py  test_tensordict.py  test_tensordict_torchbind.py  test_tensordictclass.py  test_tensordictclass_nofuture.py  test_tensordictmodules.py  test_tensorstack.py  test_torchrec.py  test_tree.py  test_typedtensordict.py  test_ucxx.py  test_utils.py  test_utils_key_json_split.py  test_utils_options_split.py
tutorials/: README.md  data_fashion.html  dummy.py  index.html  sg_execution_times.html  tensorclass_fashion.html  tensorclass_imagenet.html  tensordict_dataset_fashionmnist.py  tensordict_keys.html  tensordict_memory.html  tensordict_module.html  tensordict_module_functional.html  tensordict_preallocation.html  tensordict_shapes.html  tensordict_slicing.html
(+702 files in other folders)
