[build-system]
requires = ["setuptools", "wheel", "pybind11[global]", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.usort]
first_party_detection = false
target-version = ["py39"]
excludes = [
    "gallery",
    "tutorials",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[project]
name = "tensordict"
dynamic = ["version"]
description = "TensorDict is a pytorch dedicated tensor container."
authors = [
  { name="Vincent Moens", email="vincentmoens@gmail.com" }
]
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "torch",
    "numpy",
    "cloudpickle",
    "packaging",
    "importlib_metadata",
    # orjson fails to be installed in python 3.13t
    'orjson ; python_version < "3.13"',
    "pyvers (>=0.1.0,<0.2.0)",
]

[project.urls]
homepage = "https://github.com/pytorch/tensordict"

[project.optional-dependencies]
tests = [
    "pytest",
    "pyyaml",
    "pytest-instafail",
    "pytest-rerunfailures",
    "pytest-benchmark"
]
h5 = ["h5py>=3.8"]
dev = ["pybind11", "ninja"]
typecheck = ["mypy>=1.0.0"]
onnx = ["onnx", "onnxscript", "onnxruntime"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["test*", "tutorials*", "packaging*", "gallery*", "docs*", "benchmarks*"]

#[tool.setuptools.extension]
#my_extension = { sources = ["tensordict/csrc/pybind.cpp", "tensordict/csrc/utils.cpp"] }

[tool.setuptools.package-data]
"tensordict" = ["*.so", "*.pyd", "*.dll"]

[tool.setuptools_scm]
# Use SETUPTOOLS_SCM_PRETEND_VERSION=M.Major.Minor to set the version for stable releases
version_scheme = "post-release"
local_scheme = "node-and-date"
version_file = "tensordict/_version.py"

[tool.mypy]
files = "tensordict"
show_error_codes = true
pretty = true
allow_redefinition = true
warn_redundant_casts = true
# Be more lenient with type checking
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_unused_ignores = true
warn_return_any = false
warn_unreachable = true
strict_equality = false
# Ignore missing imports for external libraries
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torchvision.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true
